web/book/tests/documentation/snapshots/documentation__book__reference__syntax__literals__strings__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from artists\nderive escapes = \"\\tXYZ\\n \\\\ \"                  # tab (\\t), \"XYZ\", newline (\\n), \" \", \\, \" \"\nderive world = \"\\u0048\\u0065\\u006C\\u006C\\u006F\" # \"Hello\"\n"
---
SELECT
  *,
  '	XYZ
 \ ' AS escapes,
  'Hello' AS world
FROM
  artists

