web/book/tests/documentation/snapshots/documentation__book__reference__syntax__literals__strings__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "from artists\nselect x = \"\\t\\tline ends here\\n \\\\ \"\n"
---
SELECT
  '		line ends here
 \ ' AS x
FROM
  artists

